nenolod     2005/12/29 02:43:13 UTC	(20051229-4289)
  Log:
  load in the language file if one is specified.
  

  Changes:	Modified:
  +3 -0		trunk/src/atheme.c (File Modified) 


nenolod     2005/12/29 02:42:17 UTC	(20051229-4287)
  Log:
  - add constructs for language::name, language::translator.
  

  Changes:	Modified:
  +4 -0		trunk/include/atheme.h (File Modified) 
  +28 -0	trunk/src/conf.c (File Modified) 


nenolod     2005/12/29 02:37:23 UTC	(20051229-4285)
  Log:
  - Add constructs for: language, language::, string::, string::translation.
  - Translate for \2 (bold control code).
  

  Changes:	Modified:
  +69 -2	trunk/src/conf.c (File Modified) 
  +10 -2	trunk/src/culture.c (File Modified) 


jilles      2005/12/29 02:34:51 UTC	(20051229-4283)
  Log:
  Change is_sra() to is_soper() (has an operator{} block in atheme.conf).
  Compatibility macro is_sra(mu) (has_priv_myuser(mu, PRIV_ADMIN)).
  

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +2 -0		trunk/include/privs.h (File Modified) 
  +1 -1		trunk/modules/chanserv/status.c (File Modified) 
  +1 -1		trunk/modules/nickserv/drop.c (File Modified) 
  +1 -1		trunk/modules/nickserv/freeze.c (File Modified) 
  +1 -1		trunk/modules/nickserv/help.c (File Modified) 
  +1 -1		trunk/modules/nickserv/identify.c (File Modified) 
  +1 -1		trunk/modules/nickserv/logout.c (File Modified) 
  +1 -1		trunk/modules/nickserv/resetpass.c (File Modified) 
  +1 -1		trunk/modules/nickserv/return.c (File Modified) 
  +1 -1		trunk/modules/nickserv/sendpass.c (File Modified) 
  +1 -1		trunk/modules/nickserv/status.c (File Modified) 
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 
  +1 -1		trunk/modules/userserv/freeze.c (File Modified) 
  +1 -1		trunk/modules/userserv/help.c (File Modified) 
  +1 -1		trunk/modules/userserv/login.c (File Modified) 
  +1 -1		trunk/modules/userserv/logout.c (File Modified) 
  +1 -1		trunk/modules/userserv/resetpass.c (File Modified) 