@@ -1,4 +1,4 @@
-/* $Id: .indent.pro 2447 2005-09-29 05:29:24Z nenolod $ */
+/* $Id: .indent.pro 4293 2005-12-29 02:57:23Z jilles $ */
 
 /* copy this file to the source dir then run indent file.c */
 
@@ -34,7 +34,7 @@
 -T tld_t
 -T kline_t
 -T EVH
--T sra_t
+-T soper_t
 -T server_t
 -T user_t
 -T channel_t
