@@ -1,3 +1,12 @@
+nenolod     2005/12/29 02:52:45 UTC	(20051229-4291)
+  Log:
+  Add initial gaelic translation. (Only 1 message is translated for now.)
+  
+
+  Changes:	Modified:
+  +10 -0	trunk/translations/gaelic.language (File Added) 
+
+
 nenolod     2005/12/29 02:43:13 UTC	(20051229-4289)
   Log:
   load in the language file if one is specified.
